@@ -17,19 +17,17 @@
 package io.cloudbeaver.service.core.impl;
 
 
-import io.cloudbeaver.DBWConstants;
-import io.cloudbeaver.DBWebException;
-import io.cloudbeaver.WebProjectImpl;
-import io.cloudbeaver.WebServiceUtils;
+import io.cloudbeaver.*;
 import io.cloudbeaver.model.*;
+import io.cloudbeaver.model.app.ServletApplication;
 import io.cloudbeaver.model.session.WebSession;
 import io.cloudbeaver.registry.WebHandlerRegistry;
 import io.cloudbeaver.registry.WebSessionHandlerDescriptor;
-import io.cloudbeaver.server.CBApplication;
-import io.cloudbeaver.server.CBPlatform;
+import io.cloudbeaver.server.WebAppUtils;
+import io.cloudbeaver.server.WebApplication;
 import io.cloudbeaver.service.core.DBWServiceCore;
 import io.cloudbeaver.service.security.SMUtils;
-import io.cloudbeaver.service.session.WebSessionManager;
+import io.cloudbeaver.utils.ServletAppUtils;
 import io.cloudbeaver.utils.WebConnectionFolderUtils;
 import io.cloudbeaver.utils.WebDataSourceUtils;
 import io.cloudbeaver.utils.WebEventUtils;
@@ -46,6 +44,7 @@ import org.jkiss.dbeaver.model.app.DBPDataSourceRegistry;
 import org.jkiss.dbeaver.model.app.DBPProject;
 import org.jkiss.dbeaver.model.connection.DBPConnectionConfiguration;
 import org.jkiss.dbeaver.model.connection.DBPDriver;
+import org.jkiss.dbeaver.model.exec.DBCConnectException;
 import org.jkiss.dbeaver.model.navigator.*;
 import org.jkiss.dbeaver.model.net.DBWHandlerConfiguration;
 import org.jkiss.dbeaver.model.net.DBWHandlerType;
@@ -57,20 +56,19 @@ import org.jkiss.dbeaver.model.runtime.DBRProgressMonitor;
 import org.jkiss.dbeaver.model.secret.DBSSecretController;
 import org.jkiss.dbeaver.model.secret.DBSSecretValue;
 import org.jkiss.dbeaver.model.websocket.WSConstants;
+import org.jkiss.dbeaver.model.websocket.event.datasource.WSDataSourceConnectEvent;
 import org.jkiss.dbeaver.model.websocket.event.datasource.WSDataSourceProperty;
 import org.jkiss.dbeaver.registry.DataSourceDescriptor;
 import org.jkiss.dbeaver.registry.DataSourceProviderRegistry;
 import org.jkiss.dbeaver.registry.network.NetworkHandlerDescriptor;
 import org.jkiss.dbeaver.registry.network.NetworkHandlerRegistry;
 import org.jkiss.dbeaver.registry.settings.ProductSettingsRegistry;
+import org.jkiss.dbeaver.runtime.DBWorkbench;
 import org.jkiss.dbeaver.runtime.jobs.ConnectionTestJob;
 import org.jkiss.dbeaver.utils.RuntimeUtils;
 import org.jkiss.utils.CommonUtils;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
 /**
@@ -82,13 +80,13 @@ public class WebServiceCore implements DBWServiceCore {
 
     @Override
     public WebServerConfig getServerConfig() {
-        return new WebServerConfig(CBApplication.getInstance());
+        return WebAppUtils.getWebApplication().getWebServerConfig();
     }
 
     @Override
     public List<WebDatabaseDriverInfo> getDriverList(@NotNull WebSession webSession, String driverId) {
         List<WebDatabaseDriverInfo> result = new ArrayList<>();
-        for (DBPDriver driver : CBPlatform.getInstance().getApplicableDrivers()) {
+        for (DBPDriver driver : WebAppUtils.getWebApplication().getDriverRegistry().getApplicableDrivers()) {
             if (driverId == null || driverId.equals(driver.getFullId())) {
                 result.add(new WebDatabaseDriverInfo(webSession, driver));
             }
@@ -105,6 +103,7 @@ public class WebServiceCore implements DBWServiceCore {
     @Override
     public List<WebNetworkHandlerDescriptor> getNetworkHandlers(@NotNull WebSession webSession) {
         return NetworkHandlerRegistry.getInstance().getDescriptors().stream()
+            .filter(d -> !d.isDesktopHandler())
             .map(d -> new WebNetworkHandlerDescriptor(webSession, d)).collect(Collectors.toList());
     }
 
@@ -121,16 +120,18 @@ public class WebServiceCore implements DBWServiceCore {
                 return Collections.singletonList(connectionInfo);
             }
         }
-        var stream = webSession.getConnections().stream();
+        var stream = webSession.getAccessibleProjects().stream();
         if (projectId != null) {
-            stream = stream.filter(c -> c.getProjectId().equals(projectId));
+            stream = stream.filter(c -> c.getId().equals(projectId));
         }
         if (projectIds != null) {
-            stream = stream.filter(c -> projectIds.contains(c.getProjectId()));
+            stream = stream.filter(c -> projectIds.contains(c.getId()));
         }
-        List<DBPDriver> applicableDrivers = CBPlatform.getInstance().getApplicableDrivers();
-        return stream.filter(c -> applicableDrivers.contains(c.getDataSourceContainer().getDriver()))
-            .collect(Collectors.toList());
+        Set<String> applicableDrivers = WebServiceUtils.getApplicableDriversIds();
+        return stream
+            .flatMap(p -> p.getConnections().stream())
+            .filter(c -> applicableDrivers.contains(c.getDataSourceContainer().getDriver().getId()))
+            .toList();
     }
 
     @Deprecated
@@ -142,7 +143,7 @@ public class WebServiceCore implements DBWServiceCore {
 
         for (DBPDataSourceContainer ds : dsRegistry.getDataSources()) {
             if (ds.isTemplate()) {
-                if (CBPlatform.getInstance().getApplicableDrivers().contains(ds.getDriver())) {
+                if (WebAppUtils.getWebApplication().getDriverRegistry().getApplicableDrivers().contains(ds.getDriver())) {
                     result.add(new WebDataSourceConfig(ds));
                 } else {
                     log.debug("Template datasource '" + ds.getName() + "' ignored - driver is not applicable");
@@ -157,28 +158,31 @@ public class WebServiceCore implements DBWServiceCore {
     public List<WebConnectionInfo> getTemplateConnections(
         @NotNull WebSession webSession, @Nullable String projectId
     ) throws DBWebException {
+        if (webSession.getApplication().isDistributed()) {
+            return List.of();
+        }
         List<WebConnectionInfo> result = new ArrayList<>();
         if (projectId == null) {
-            for (DBPProject project : webSession.getAccessibleProjects()) {
+            for (WebSessionProjectImpl project : webSession.getAccessibleProjects()) {
                 getTemplateConnectionsFromProject(webSession, project, result);
             }
         } else {
-            DBPProject project = getProjectById(webSession, projectId);
+            WebSessionProjectImpl project = getProjectById(webSession, projectId);
             getTemplateConnectionsFromProject(webSession, project, result);
         }
-        webSession.filterAccessibleConnections(result);
         return result;
     }
 
     private void getTemplateConnectionsFromProject(
         @NotNull WebSession webSession,
-        @NotNull DBPProject project,
+        @NotNull WebSessionProjectImpl project,
         List<WebConnectionInfo> result
     ) {
         DBPDataSourceRegistry registry = project.getDataSourceRegistry();
         for (DBPDataSourceContainer ds : registry.getDataSources()) {
             if (ds.isTemplate() &&
-                CBPlatform.getInstance().getApplicableDrivers().contains(ds.getDriver())) {
+                project.getDataSourceFilter().filter(ds) &&
+                WebAppUtils.getWebApplication().getDriverRegistry().getApplicableDrivers().contains(ds.getDriver())) {
                 result.add(new WebConnectionInfo(webSession, ds));
             }
         }
@@ -211,7 +215,7 @@ public class WebServiceCore implements DBWServiceCore {
 
     @Override
     public String[] getSessionPermissions(@NotNull WebSession webSession) throws DBWebException {
-        if (CBApplication.getInstance().isConfigurationMode()) {
+        if (ServletAppUtils.getServletApplication().isConfigurationMode()) {
             return new String[]{
                 DBWConstants.PERMISSION_ADMIN
             };
@@ -266,7 +270,7 @@ public class WebServiceCore implements DBWServiceCore {
     @Override
     public boolean closeSession(HttpServletRequest request) throws DBWebException {
         try {
-            var baseWebSession = CBPlatform.getInstance().getSessionManager().closeSession(request);
+            var baseWebSession = WebAppUtils.getWebApplication().getSessionManager().closeSession(request);
             if (baseWebSession instanceof WebSession webSession) {
                 for (WebSessionHandlerDescriptor hd : WebHandlerRegistry.getInstance().getSessionHandlers()) {
                     try {
@@ -287,14 +291,14 @@ public class WebServiceCore implements DBWServiceCore {
     @Override
     @Deprecated
     public boolean touchSession(@NotNull HttpServletRequest request, @NotNull HttpServletResponse response) throws DBWebException {
-        return CBPlatform.getInstance().getSessionManager().touchSession(request, response);
+        return WebAppUtils.getWebApplication().getSessionManager().touchSession(request, response);
     }
 
     @Override
     @Deprecated
     public WebSession updateSession(@NotNull HttpServletRequest request, @NotNull HttpServletResponse response)
         throws DBWebException {
-        WebSessionManager sessionManager = CBPlatform.getInstance().getSessionManager();
+        var sessionManager = WebAppUtils.getWebApplication().getSessionManager();
         sessionManager.touchSession(request, response);
         return sessionManager.getWebSession(request, response, true);
     }
@@ -302,7 +306,7 @@ public class WebServiceCore implements DBWServiceCore {
     @Override
     public boolean refreshSessionConnections(@NotNull HttpServletRequest request, @NotNull HttpServletResponse response)
         throws DBWebException {
-        WebSession session = CBPlatform.getInstance().getSessionManager().getWebSession(request, response);
+        WebSession session = WebAppUtils.getWebApplication().getSessionManager().getWebSession(request, response);
         if (session == null) {
             return false;
         } else {
@@ -320,9 +324,11 @@ public class WebServiceCore implements DBWServiceCore {
 
     @Override
     public WebConnectionInfo getConnectionState(
-        WebSession webSession, @Nullable String projectId, String connectionId
+        @NotNull WebSession webSession,
+        @Nullable String projectId,
+        @NotNull String connectionId
     ) throws DBWebException {
-        return webSession.getWebConnectionInfo(projectId, connectionId);
+        return WebDataSourceUtils.getWebConnectionInfo(webSession, projectId, connectionId);
     }
 
 
@@ -337,7 +343,7 @@ public class WebServiceCore implements DBWServiceCore {
         @Nullable Boolean sharedCredentials,
         @Nullable String selectedSecretId
     ) throws DBWebException {
-        WebConnectionInfo connectionInfo = webSession.getWebConnectionInfo(projectId, connectionId);
+        WebConnectionInfo connectionInfo = WebDataSourceUtils.getWebConnectionInfo(webSession, projectId, connectionId);
         connectionInfo.setSavedCredentials(authProperties, networkCredentials);
 
         var dataSourceContainer = (DataSourceDescriptor) connectionInfo.getDataSourceContainer();
@@ -362,8 +368,20 @@ public class WebServiceCore implements DBWServiceCore {
         }
 
         boolean oldSavePassword = dataSourceContainer.isSavePassword();
+        DBRProgressMonitor monitor = webSession.getProgressMonitor();
+        validateDriverLibrariesPresence(dataSourceContainer);
         try {
-            dataSourceContainer.connect(webSession.getProgressMonitor(), true, false);
+            boolean connect = dataSourceContainer.connect(monitor, true, false);
+            if (connect) {
+                webSession.addSessionEvent(
+                    new WSDataSourceConnectEvent(
+                        projectId,
+                        connectionId,
+                        webSession.getSessionId(),
+                        webSession.getUserId()
+                    )
+                );
+            }
         } catch (Exception e) {
             throw new DBWebException("Error connecting to database", e);
         } finally {
@@ -433,11 +451,11 @@ public class WebServiceCore implements DBWServiceCore {
         @Nullable String projectId,
         @NotNull WebConnectionConfig connectionConfig
     ) throws DBWebException {
-        var project = getProjectById(webSession, projectId);
-        var rmProject = project.getRmProject();
+        WebSessionProjectImpl project = getProjectById(webSession, projectId);
+        var rmProject = project.getRMProject();
         if (rmProject.getType() == RMProjectType.USER
             && !webSession.hasPermission(DBWConstants.PERMISSION_ADMIN)
-            && !CBApplication.getInstance().getAppConfiguration().isSupportsCustomConnections()
+            && !ServletAppUtils.getServletApplication().getAppConfiguration().isSupportsCustomConnections()
         ) {
             throw new DBWebException("New connection create is restricted by server configuration");
         }
@@ -463,8 +481,7 @@ public class WebServiceCore implements DBWServiceCore {
             throw new DBWebException("Failed to create connection", e);
         }
 
-        WebConnectionInfo connectionInfo = new WebConnectionInfo(webSession, newDataSource);
-        webSession.addConnection(connectionInfo);
+        WebConnectionInfo connectionInfo = project.addConnection(newDataSource);
         webSession.addInfoMessage("New connection was created - " + WebServiceUtils.getConnectionContainerInfo(
             newDataSource));
         WebEventUtils.addDataSourceUpdatedEvent(
@@ -488,13 +505,13 @@ public class WebServiceCore implements DBWServiceCore {
 //        if (!CBApplication.getInstance().getAppConfiguration().isSupportsCustomConnections()) {
 //            throw new DBWebException("Connection edit is restricted by server configuration");
 //        }
-        DBPDataSourceRegistry sessionRegistry = getProjectById(webSession, projectId).getDataSourceRegistry();
 
-        WebConnectionInfo connectionInfo = webSession.getWebConnectionInfo(projectId, config.getConnectionId());
+        WebConnectionInfo connectionInfo = WebDataSourceUtils.getWebConnectionInfo(webSession, projectId, config.getConnectionId());
         DBPDataSourceContainer dataSource = connectionInfo.getDataSourceContainer();
         webSession.addInfoMessage("Update connection - " + WebServiceUtils.getConnectionContainerInfo(dataSource));
-        var oldDataSource = new DataSourceDescriptor((DataSourceDescriptor) dataSource, dataSource.getRegistry());
-
+        DataSourceDescriptor oldDataSource;
+        oldDataSource = dataSource.getRegistry().createDataSource(dataSource);
+        oldDataSource.setId(dataSource.getId());
         if (!CommonUtils.isEmpty(config.getName())) {
             dataSource.setName(config.getName());
         }
@@ -503,8 +520,12 @@ public class WebServiceCore implements DBWServiceCore {
             dataSource.setDescription(config.getDescription());
         }
 
+        WebSessionProjectImpl project = getProjectById(webSession, projectId);
+        DBPDataSourceRegistry sessionRegistry = project.getDataSourceRegistry();
         dataSource.setFolder(config.getFolder() != null ? sessionRegistry.getFolder(config.getFolder()) : null);
-
+        if (config.isDefaultAutoCommit() != null) {
+            dataSource.setDefaultAutoCommit(config.isDefaultAutoCommit());
+        }
         WebServiceUtils.setConnectionConfiguration(dataSource.getDriver(),
             dataSource.getConnectionConfiguration(),
             config);
@@ -577,7 +598,7 @@ public class WebServiceCore implements DBWServiceCore {
     public boolean deleteConnection(
         @NotNull WebSession webSession, @Nullable String projectId, @NotNull String connectionId
     ) throws DBWebException {
-        WebConnectionInfo connectionInfo = webSession.getWebConnectionInfo(projectId, connectionId);
+        WebConnectionInfo connectionInfo = WebDataSourceUtils.getWebConnectionInfo(webSession, projectId, connectionId);
         if (connectionInfo.getDataSourceContainer().getProject() != getProjectById(webSession, projectId)) {
             throw new DBWebException("Global connection '" + connectionInfo.getName() + "' configuration cannot be deleted");
         }
@@ -595,13 +616,15 @@ public class WebServiceCore implements DBWServiceCore {
     }
 
     @Override
+    @Deprecated
     public WebConnectionInfo createConnectionFromTemplate(
         @NotNull WebSession webSession,
         @NotNull String projectId,
         @NotNull String templateId,
         @Nullable String connectionName
     ) throws DBWebException {
-        DBPDataSourceRegistry templateRegistry = getProjectById(webSession, projectId).getDataSourceRegistry();
+        WebSessionProjectImpl project = getProjectById(webSession, projectId);
+        DBPDataSourceRegistry templateRegistry = project.getDataSourceRegistry();
         DBPDataSourceContainer dataSourceTemplate = templateRegistry.getDataSource(templateId);
         if (dataSourceTemplate == null) {
             throw new DBWebException("Template data source '" + templateId + "' not found");
@@ -610,8 +633,11 @@ public class WebServiceCore implements DBWServiceCore {
         DBPDataSourceRegistry projectRegistry = webSession.getSingletonProject().getDataSourceRegistry();
         DBPDataSourceContainer newDataSource = projectRegistry.createDataSource(dataSourceTemplate);
 
-        ((DataSourceDescriptor) newDataSource).setNavigatorSettings(
-            CBApplication.getInstance().getAppConfiguration().getDefaultNavigatorSettings());
+        ServletApplication app = ServletAppUtils.getServletApplication();
+        if (app instanceof WebApplication webApplication) {
+            ((DataSourceDescriptor) newDataSource).setNavigatorSettings(
+                webApplication.getAppConfiguration().getDefaultNavigatorSettings());
+        }
 
         if (!CommonUtils.isEmpty(connectionName)) {
             newDataSource.setName(connectionName);
@@ -624,9 +650,7 @@ public class WebServiceCore implements DBWServiceCore {
             throw new DBWebException(e.getMessage(), e);
         }
 
-        WebConnectionInfo connectionInfo = new WebConnectionInfo(webSession, newDataSource);
-        webSession.addConnection(connectionInfo);
-        return connectionInfo;
+        return project.addConnection(newDataSource);
     }
 
     @Override
@@ -637,8 +661,9 @@ public class WebServiceCore implements DBWServiceCore {
         @NotNull WebConnectionConfig config
     ) throws DBWebException {
         try {
-            DBNModel navigatorModel = webSession.getNavigatorModel();
-            DBPDataSourceRegistry dataSourceRegistry = getProjectById(webSession, projectId).getDataSourceRegistry();
+            DBNModel navigatorModel = webSession.getNavigatorModelOrThrow();
+            WebSessionProjectImpl project = getProjectById(webSession, projectId);
+            DBPDataSourceRegistry dataSourceRegistry = project.getDataSourceRegistry();
 
             DBNNode srcNode = navigatorModel.getNodeByPath(webSession.getProgressMonitor(), nodePath);
             if (srcNode == null) {
@@ -651,8 +676,11 @@ public class WebServiceCore implements DBWServiceCore {
 
             DBPDataSourceContainer newDataSource = dataSourceRegistry.createDataSource(dataSourceTemplate);
 
-            ((DataSourceDescriptor) newDataSource).setNavigatorSettings(
-                CBApplication.getInstance().getAppConfiguration().getDefaultNavigatorSettings());
+            ServletApplication app = ServletAppUtils.getServletApplication();
+            if (app instanceof WebApplication webApplication) {
+                ((DataSourceDescriptor) newDataSource).setNavigatorSettings(
+                    webApplication.getAppConfiguration().getDefaultNavigatorSettings());
+            }
 
             // Copy props from config
             if (!CommonUtils.isEmpty(config.getName())) {
@@ -664,9 +692,8 @@ public class WebServiceCore implements DBWServiceCore {
 
             dataSourceRegistry.addDataSource(newDataSource);
 
-            WebConnectionInfo connectionInfo = new WebConnectionInfo(webSession, newDataSource);
             dataSourceRegistry.checkForErrors();
-            webSession.addConnection(connectionInfo);
+            WebConnectionInfo connectionInfo = project.addConnection(newDataSource);
             WebEventUtils.addDataSourceUpdatedEvent(
                 webSession.getProjectById(projectId),
                 webSession,
@@ -689,7 +716,7 @@ public class WebServiceCore implements DBWServiceCore {
         connectionConfig.setSaveCredentials(true); // It is used in createConnectionFromConfig
 
         DataSourceDescriptor dataSource = (DataSourceDescriptor) WebDataSourceUtils.getLocalOrGlobalDataSource(
-            CBApplication.getInstance(), webSession, projectId, connectionId);
+            webSession, projectId, connectionId);
 
         WebProjectImpl project = getProjectById(webSession, projectId);
         DBPDataSourceRegistry sessionRegistry = project.getDataSourceRegistry();
@@ -732,6 +759,7 @@ public class WebServiceCore implements DBWServiceCore {
             testDataSource = (DataSourceDescriptor) WebServiceUtils.createConnectionFromConfig(connectionConfig,
                 sessionRegistry);
         }
+        validateDriverLibrariesPresence(testDataSource);
         webSession.provideAuthParameters(webSession.getProgressMonitor(),
             testDataSource,
             testDataSource.getConnectionConfiguration());
@@ -744,6 +772,12 @@ public class WebServiceCore implements DBWServiceCore {
             });
             ct.run(webSession.getProgressMonitor());
             if (ct.getConnectError() != null) {
+                if (ct.getConnectError() instanceof DBCConnectException error) {
+                    Throwable rootCause = CommonUtils.getRootCause(error);
+                    if (rootCause instanceof ClassNotFoundException) {
+                        throwDriverNotFoundException(testDataSource);
+                    }
+                }
                 throw new DBWebException("Connection failed", ct.getConnectError());
             }
             WebConnectionInfo connectionInfo = new WebConnectionInfo(webSession, testDataSource);
@@ -825,12 +859,13 @@ public class WebServiceCore implements DBWServiceCore {
         @NotNull String connectionId,
         boolean forceDelete
     ) throws DBWebException {
-        WebConnectionInfo connectionInfo = webSession.getWebConnectionInfo(projectId, connectionId);
+        WebSessionProjectImpl project = getProjectById(webSession, projectId);
+        WebConnectionInfo connectionInfo = project.getWebConnectionInfo(connectionId);
 
         DBPDataSourceContainer dataSourceContainer = connectionInfo.getDataSourceContainer();
         boolean disconnected = WebDataSourceUtils.disconnectDataSource(webSession, dataSourceContainer);
         if (forceDelete) {
-            DBPDataSourceRegistry registry = getProjectById(webSession, projectId).getDataSourceRegistry();
+            DBPDataSourceRegistry registry = project.getDataSourceRegistry();
             registry.removeDataSource(dataSourceContainer);
             try {
                 registry.checkForErrors();
@@ -842,7 +877,7 @@ public class WebServiceCore implements DBWServiceCore {
                 }
                 throw new DBWebException("Failed to delete connection", e);
             }
-            webSession.removeConnection(connectionInfo);
+            project.removeConnection(dataSourceContainer);
         } else {
             // Just reset saved credentials
             connectionInfo.clearCache();
@@ -855,7 +890,7 @@ public class WebServiceCore implements DBWServiceCore {
     @Override
     public List<WebProjectInfo> getProjects(@NotNull WebSession session) {
         var customConnectionsEnabled =
-            CBApplication.getInstance().getAppConfiguration().isSupportsCustomConnections()
+            ServletAppUtils.getServletApplication().getAppConfiguration().isSupportsCustomConnections()
                 || SMUtils.isRMAdmin(session);
         return session.getAccessibleProjects().stream()
             .map(pr -> new WebProjectInfo(session, pr, customConnectionsEnabled))
@@ -956,7 +991,7 @@ public class WebServiceCore implements DBWServiceCore {
     public WebConnectionInfo setConnectionNavigatorSettings(
         WebSession webSession, @Nullable String projectId, String id, DBNBrowseSettings settings
     ) throws DBWebException {
-        WebConnectionInfo connectionInfo = webSession.getWebConnectionInfo(projectId, id);
+        WebConnectionInfo connectionInfo = WebDataSourceUtils.getWebConnectionInfo(webSession, projectId, id);
         DataSourceDescriptor dataSourceDescriptor = ((DataSourceDescriptor) connectionInfo.getDataSourceContainer());
         dataSourceDescriptor.setNavigatorSettings(settings);
         dataSourceDescriptor.persistConfiguration();
@@ -985,11 +1020,23 @@ public class WebServiceCore implements DBWServiceCore {
         return new WebProductSettings(webSession, ProductSettingsRegistry.getInstance().getSettings());
     }
 
-    private WebProjectImpl getProjectById(WebSession webSession, String projectId) throws DBWebException {
-        WebProjectImpl project = webSession.getProjectById(projectId);
+    private WebSessionProjectImpl getProjectById(WebSession webSession, String projectId) throws DBWebException {
+        WebSessionProjectImpl project = webSession.getProjectById(projectId);
         if (project == null) {
             throw new DBWebException("Project '" + projectId + "' not found");
         }
         return project;
+    }
+
+    private void validateDriverLibrariesPresence(@NotNull DBPDataSourceContainer container) throws DBWebException {
+        if (!DBWorkbench.isDistributed() && container.getDriver().needsExternalDependencies()) {
+            throwDriverNotFoundException(container);
+        }
+    }
+
+    @NotNull
+    private static String throwDriverNotFoundException(@NotNull DBPDataSourceContainer container) throws DBWebException {
+        throw new DBWebException("Driver files for %s are not found. Please ask the administrator to download it."
+            .formatted(container.getDriver().getName()));
     }
 }
